# blog2022

./: .gitignore  Makefile  check_dependencies.bat
awsbackend/: README.md
awsbackend/client/: angular.json  package-lock.json  package.json
awsbackend/iac/: Makefile  Pulumi.dev.yaml  Pulumi.yaml  go.mod  go.sum  main.go
awsbackend/lambda/: go.mod  go.sum  main.go
awsbackend_oauth2/: README.md
awsbackend_oauth2/client/: package-lock.json  package.json  tsconfig.json
awsbackend_oauth2/iac/: Makefile  go.mod  go.sum  main.go
awsbackend_oauth2/lambda/: go.mod  go.sum  main.go
awsbatchgpu/: README.md
awsbatchgpu/catboost/: Dockerfile  pyproject.toml
awsbatchgpu/catboost/demo/: __main__.py
awsbatchgpu/infra/: Pulumi.yaml  __main__.py  pyproject.toml
awsbatchgpu/llm/: Dockerfile  pyproject.toml
awsbatchgpu/llm/demo/: __main__.py
bluesky-replybot/: README.md  go.mod  go.sum  main.go
blueskypost/: README.md
blueskypost/earthquake/: .gitignore  go.mod  go.sum  main.go
blueskypost/hello/: go.mod  go.sum  main.go
dexiejs-livequery/: README.md  angular.json  package.json
dexiejs-livequery/src/: index.html  main.ts
go-git-examples/: README.md  go.mod  go.sum
go-git-examples/addcommit/: main.go
go-git-examples/backup/: main.go
go-git-examples/branch/: main.go
go-git-examples/clone/: main.go
go-git-examples/clone_in_memory/: main.go
go-git-examples/init/: main.go
go-git-examples/log/: main.go
go-git-examples/pullpush/: main.go
go-git-examples/remotes/: main.go
go-git-examples/status/: main.go
go-git-examples/tag/: main.go
go-slices-maps/: README.md  go.mod
godockerllm/: README.md  go.mod  go.sum
gotenberg/: README.md  go.mod  go.sum
hibp-go/: README.md
hotupdate/: README.md  angular.json  capacitor.config.ts  ionic.config.json  package.json  zip.js
javersdemo/: README.md  Taskfile.yml  docker-compose-codegen.yml  docker-compose.yml  pom.xml
llmsearch/: README.md  go.mod  go.sum  main.go
mongodb-validation/: README.md  docker-compose.yml  pom.xml
passwordless-dev-go/: .gitignore  README.md
pix2sketch/: .gitignore  README.md
pockettodo/: .gitignore  README.md  docker-compose.yml
pulumi-hetzner/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json  wireguard.yaml
python-lambda/: README.md
python-lambda/splitpdf/: .gitignore  lint.py  pyproject.toml  zip.py
python-lambda/splitpdf/splitpdf/: main.py  split.py
python-lambda/splitpdf/tests/: test_split_pdf.py
s3-fast-list/: README.md  go.mod  go.sum
s3select/: .gitignore  Makefile  README.md
shedlockdemo/: README.md  Taskfile.yml  docker-compose-codegen.yml  docker-compose.yml  generate-jooq.cmd  pom.xml
springai-rag/: README.md  docker-compose.yml  pom.xml
springai-tool/: README.md  pom.xml
sqsprotobuf/: Dockerfile  Makefile  README.md
transformer-js/: .gitignore  README.md
transformer-js/convert/: pyproject.toml
transformer-js/convert/convert/: convert.py
transformer-js/finetune/: countries-training-data.json  pyproject.toml
transformer-js/finetune/finetune/: main.py  merge.py
transformers-js-speech/: .editorconfig  README.md  angular.json  ionic.config.json  package.json
webpush-angular/: README.md
xodus/: .gitignore  README.md  pom.xml
(+345 files in other folders)
