[tool.poetry]
name = "splitpdf"
version = "0.1.0"
description = ""
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = {extras = ["s3", "ssm"], version = "1.35.27"}
pypdf = "5.0.0"
boto3-stubs = {extras = ["s3", "ssm"], version = "1.35.27"}
aws-lambda-powertools = "3.0.0"
slack-sdk = "3.33.1"



[tool.poetry.group.dev.dependencies]
ruff = "0.6.7"
mypy = "1.11.2"
moto = {extras = ["s3"], version = "5.0.15"}
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "lint:run_lint"
zip = "zip:run_zip"
