[tool.poetry]
name = "finetune"
version = "0.1.0"
description = ""
authors = ["Ralph Schaer <ralphschaer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.0"
datasets = "^3.0.2"
accelerate = "^1.0.1"
peft = "^0.13.2"
trl = "^0.11.4"
torch = "^2.5.0"
bitsandbytes = "^0.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
